--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 				</h1>
 				<p data-aos="fade-down" data-aos-once="true" data-aos-delay="300" class="leading-normal text-2xl mb-8">Simplifica la Evaluación de Impactos Ambientales</p>
 				<div data-aos="fade-up" data-aos-once="true" data-aos-delay="700" class="w-full md:flex items-center justify-center lg:justify-start md:space-x-5">
-					<button class="lg:mx-0 bg-yellow-500 text-white text-xl font-bold rounded-full py-4 px-9 focus:outline-none transform transition hover:scale-110 duration-300 ease-in-out">
-						Join for free
+					<button href="ingresar/pages/login/register.php" class="lg:mx-0 bg-yellow-500 text-white text-xl font-bold rounded-full py-4 px-9 focus:outline-none transform transition hover:scale-110 duration-300 ease-in-out">
+						Ingresa gratis
 					</button>
 				</div>
 			</div>
@@ -214,7 +214,7 @@
 				<label class="text-white font-semibold">¡Regístrate Ahora y Comienza tu Viaje hacia la Sostenibilidad!</label>
 				<div class="px-5 sm:px-0 flex flex-col sm:flex-row sm:space-x-3 space-y-3 sm:space-y-0 justify-center mt-3">
 					<input type="email" placeholder="tu correo" class=" text-white rounded-full py-2 pl-5 bg-transparent border border-white-400">
-					<button type="submit" class="text-white w-40 sm:w-auto mx-auto sm:mx-0 font-semibold px-5 py-2 rounded-full" style="background: linear-gradient(105.5deg, #efbc98 19.57%, #efd2be 78.85%);">Mas informacion</button>
+					<button type="submit" href="ingresar/pages/login/register.php" class="text-white w-40 sm:w-auto mx-auto sm:mx-0 font-semibold px-5 py-2 rounded-full" style="background: linear-gradient(105.5deg, #efbc98 19.57%, #efd2be 78.85%);">Mas informacion</button>
 				</div>
 			</div>
 			<div class="flex items-center text-white-400 text-sm justify-center">
